src/app/app.component.scss
.container {
    background: #fff;
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: row;

}

.side-menu {
    background-color: #fff;
    height: 100%;
    width: 20vw;
    max-width: 300px;
    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
    // animation: showSidebarAnim;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}

.main-zone {

    background-color: #edf1f7;
    
    border-radius: 40px 0 0 ;
    height: 100%;
    width: 100%;
    box-shadow: 16px 16px 16px 16px rgba(0,0,0,0.2);
    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
    // animation: showSidebarAnimForMain;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}

.main-container {
    padding: 0 0 0 20px;
    width: 100%; 
    height: 100%;
    // animation: showSidebarAnimForMain;
    animation-duration: 1s;
    animation-fill-mode: forwards;
}

@keyframes showSidebarAnim {
    0% {
        width: 0;
    }
    100% {
        width: 20vw;
    }
}

@keyframes showSidebarAnimForMain {
    0%{
        padding: 0;
        border-radius: 0;
    }

    100% {
        padding: 0 0 0 20px;
        border-radius: 40px 0 0 ;
    }
}

@keyframes hideSidebarAnim {
    0% {
        width: 20vw;
    }
    100% {
        width: 0;
    }
}

@keyframes hideSidebarAnimForMain {
    0% {
        padding: 0 0 0 20px;
        border-radius: 40px 0 0 0;
    }
    100%{
        padding: 0;
        border-radius: 0;
    }
}

.button01 {
    background: none;
    border: none;
    border-radius: 4px;
    width: 50px;
    height: 50px;
    transition: 0.2s;
}

.button01 :hover {
    background-color: #fff;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    border-radius: 4px;
    transition: 0.2s;
}

.buttonMenu {
    background: #fff;
    padding:10px;
    border: none;
    transition: 0.2s;
    text-align: center;
    display: flex;
    justify-content: space-between;
    
}

.buttonMenu :hover {
    color:#426EF0;
    border-bottom: grey solid;
    transition: 0.2s;
}

.navbar {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.heading1 {
    font-family: 'Maven Pro';
    font-size: 1.7rem;
    color:rgb(101, 101, 101)
}

.heading2 {
    font-family: 'Maven Pro';
    font-size:1.2rem;
    font-weight: bold;
}

.menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 10vh;
}

